istio-discovery-ing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: discovery-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "discovery-api-istio.dev.internal.smartcolumbusos.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "discovery-api-istio.dev.internal.smartcolumbusos.com"
    tls:
      httpsRedirect: false
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: discovery-api
spec:
  hosts:
  - "discovery-api-istio.dev.internal.smartcolumbusos.com"
  gateways:
  - discovery-api-gateway
  http:
  - route:
    - destination:
        host: discovery-api.discovery.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: discovery-ui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "discovery-ui-istio.dev.internal.smartcolumbusos.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "discovery-ui-istio.dev.internal.smartcolumbusos.com"
    tls:
      httpsRedirect: false
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: discovery-ui
spec:
  hosts:
  - "discovery-ui-istio.dev.internal.smartcolumbusos.com"
  gateways:
  - discovery-ui-gateway
  http:
  - route:
    - destination:
        host: discovery-ui.discovery.svc.cluster.local
        port:
          number: 80
